# powerfc

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  CMakeLists.txt  LICENSE  Makefile  PFC_Datastructures.h  README.md  main.c  old.h  pfc_list.c  pfc_list.h  pfc_registry.c  pfc_registry.h  pfc_types.h  serial.c  serial.h  xstruct_undef.h
.github/workflows/: codeql-analysis.yml
.theia/: launch.json
cmake/: CodeCoverage.cmake  Gengetopt.cmake
component/powerfc/: CMakeLists.txt
lib/: CMakeLists.txt
lib/gtest/: CMakeLists.txt
lib/xml/: xmlparser.c  xmlparser.h  xmltree.c  xmltree.h
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  pfc_list.c  pfc_memory.c  pfc_memory.h  pfc_memoryconfig.c  pfc_memoryregistry.c  pfc_memorytypes.c  pfc_process.c  pfc_recorder.c  pfc_registry.c  pfc_registry.h  serial.c
src/lib/include/: pfc_list.h  pfc_memory.h  pfc_memoryconfig.h  pfc_memoryregistry.h  pfc_memorytypes.h  pfc_process.h  pfc_recorder.h  pfc_registry.h  pfc_types.h  serial.h
src/tests/: CMakeLists.txt  FCPRO.hd1  main.cc  test_lists.cc  test_memory_config.xml  test_memory_config_bad.xml  test_memoryconfig.cc  test_memoryregistry.cc  test_memorytypes.cc  test_process.cc  test_recorder.cc  test_registry.cc  test_resources.cc  test_serial.cc  valgrind.suppress
src/tests/support/: process.cc  process.h
src/tools/: CMakeLists.txt  pfc_dump.c  pfc_dump_cmdline.ggo  pfc_read.c  pfc_read_cmdline.ggo  pfc_sim.c  pfc_sim_cmdline.ggo  pfc_sim_dump.c  pfc_sim_dump_cmdline.ggo
utils/: fcedit.sh  fcedit_tty.sh  fcpro.sh  sim_dump.sh  socat.sh
